--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "DrupalMysqlExport",
   "version": "1.0.0",
   "dependencies": {
+    "@contentstack/json-rte-serializer": "^2.0.0",
+    "ansi-colors": "^4.1.3",
     "async": "^2.1.5",
+    "cli-progress": "^3.11.2",
     "fs": "0.0.1-security",
+    "jsdom": "^20.0.2",
     "lodash": "^4.17.2",
     "mariadb": "^2.1.1",
     "mkdirp": "^0.5.1",
