--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@contentstack/json-rte-serializer": "^2.0.0",
     "ansi-colors": "^4.1.3",
     "async": "^2.1.5",
+    "axios": "^1.3.4",
+    "chalk": "^4.1.0",
     "cli-progress": "^3.11.2",
     "fs": "0.0.1-security",
     "jsdom": "^20.0.2",
