CLI v2 support added

--- a/package.json
+++ b/package.json
@@ -2,22 +2,19 @@
   "name": "DrupalMysqlExport",
   "version": "1.0.0",
   "dependencies": {
-    "@contentstack/json-rte-serializer": "^2.0.0",
+    "@contentstack/json-rte-serializer": "^2.0.6",
     "ansi-colors": "^4.1.3",
     "async": "^2.1.5",
     "axios": "^1.3.4",
     "chalk": "^4.1.0",
-    "cli-progress": "^3.11.2",
     "fs": "0.0.1-security",
     "jsdom": "^20.0.2",
     "lodash": "^4.17.2",
     "mariadb": "^2.1.1",
     "mkdirp": "^0.5.1",
-    "mysql": "^2.12.0",
+    "mysql2": "^3.6.0",
     "node-async-loop": "^1.2.2",
-    "path": "^0.12.7",
     "phpunserialize": "^1.0.1",
-    "q": "^1.4.1",
     "request": "^2.88.0",
     "url": "^0.11.0",
     "when": "^3.7.7",
